# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")
import("//services/service_manager/public/cpp/service_executable.gni")

component("pal_media_service") {
  sources = [
    "media_track_info.h",
    "mediaplayer_base_impl.cc",
    "mediaplayer_base_impl.h",
    "neva_pal_media_manifest.cc",
    "neva_pal_media_manifest.h",
    "pal_media_player_factory.cc",
    "pal_media_player_factory.h",
    "pal_media_service_export.h",
    "pal_media_service_factory.cc",
    "pal_media_service_factory.h",
    "pal_media_service.cc",
    "pal_media_service.h",
    "weak_function.h",
  ]

  deps = [
    "//base",
    "//media/base",
    "//neva/emulator",
 ]

  public_deps = [
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//neva/pal_media_service/public/mojom",
    "//services/service_manager/public/cpp",
    "//services/service_manager/public/mojom",
    "//skia",
    "//third_party/jsoncpp",
  ]

  defines = [ "PAL_MEDIA_SERVICE_IMPLEMENTATION" ]

  if (is_webos && use_neva_media) {
    import ("//neva/pal_media_service/webos/webos.gni")
    configs += webos.configs
    deps += webos.deps
    public_deps += webos.public_deps
    sources += webos.sources
  } else {
    sources += [
      "mediaplayer_stub.h",
    ]
  }
}
