# Copyright 2019-2020 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")
import("//services/service_manager/public/cpp/service_executable.gni")

component("pal_media_service") {
  sources = [
    "neva_pal_media_manifest.cc",
    "neva_pal_media_manifest.h",
    "pal_media_service.cc",
    "pal_media_service.h",
    "pal_media_service_export.h",
    "pal_media_service_factory.cc",
    "pal_media_service_factory.h",
    "remote_mediaplayer.cc",
    "remote_mediaplayer.h",
    "weak_function.h",
  ]

  deps = [
    "//base",
    "//media/base",
    "//neva/emulator",
  ]

  public_deps = [
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//neva/pal_media_service/public/mojom",
    "//services/service_manager/public/cpp",
    "//services/service_manager/public/mojom",
    "//skia",
    "//third_party/jsoncpp",
  ]

  defines = [ "PAL_MEDIA_SERVICE_IMPLEMENTATION" ]
}
