# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")
import("//services/service_manager/public/cpp/service_executable.gni")

component("pal_service") {
  sources = [
    "memorymanager.cc",
    "memorymanager.h",
    "memorymanager_delegate.h",
    "neva_pal_manifest.cc",
    "neva_pal_manifest.h",
    "pal_platform_factory.cc",
    "pal_platform_factory.h",
    "pal_service_export.h",
    "pal_service_factory.cc",
    "pal_service_factory.h",
    "pal_service.cc",
    "pal_service.h",
    "sample.cc",
    "sample.h",
    "system_servicebridge.cc",
    "system_servicebridge.h",
    "system_servicebridge_delegate.h",
  ]

  deps = [
    "//base",
    "//neva/emulator",
 ]

  public_deps = [
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//neva/pal_service/public/mojom",
    "//services/service_manager/public/cpp",
    "//services/service_manager/public/mojom",
   ]

  defines = [ "PAL_SERVICE_IMPLEMENTATION" ]

  if (is_webos) {
    deps += [
      "//neva/pal_service/webos:pal_service_webos",
    ]
  } else {
    deps += [
      "//neva/pal_service/pc:pal_service_pc",
    ]
  }
}
