# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//extensions/shell/neva_extensions.gni")

source_set("neva_app_shell_lib") {
  deps = [
    "//apps",
    "//components/feedback",
    "//components/guest_view/browser",
    "//components/guest_view/common",
    "//components/guest_view/renderer",
    "//components/keep_alive_registry",
    "//components/nacl/common:process_type",
    "//components/pref_registry",
    "//components/prefs",
    "//components/update_client",
    "//components/user_prefs",
    "//components/web_cache/renderer",
    "//device/base",
    "//device/bluetooth",
    "//extensions:extensions_resources",
    "//extensions/browser",
    "//extensions/browser:core_api_provider",
    "//extensions/browser/api:api_registration",
    "//extensions/browser/kiosk",
    "//extensions/common",
    "//extensions/common:core_api_provider",
    "//extensions/common/api",
    "//extensions/renderer",
    "//extensions/shell/browser/system_logs",
    "//extensions/shell/common/api",
    "//extensions/shell/common/api:extensions_features",
    "//skia",
    "//third_party/boringssl",
    "//third_party/cld_3/src/src:cld_3",
    "//ui/base/ime",
    "//v8",
  ]

  sources = webview_sources_abs
  if (is_desktop_linux) {
    sources += [
      "//extensions/shell/browser/api/file_system/shell_file_system_delegate.cc",
      "//extensions/shell/browser/api/file_system/shell_file_system_delegate.h",
    ]
  }
}

