# Copyright 2018-2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

neva = {
  configs = []
  public_configs = []
  deps = []
  public_deps = [ "//third_party/jsoncpp" ]
  _dir = get_path_info("../neva", "abspath")
  sources = [
      "$_dir/media_constants.h",
      "$_dir/media_platform_api.cc",
      "$_dir/media_platform_api.h",
      "$_dir/media_platform_prefs.cc",
      "$_dir/media_platform_prefs.h",
      "$_dir/media_track_info.cc",
      "$_dir/media_track_info.h",
      "$_dir/media_type_restriction.h",
      "$_dir/neva_mime_util_internal.h",
  ]

  if (is_webos) {
    import ("//media/base/neva/webos/build.gni")
    configs += webos.configs
    public_configs += webos.public_configs
    deps += webos.deps
    public_deps += webos.public_deps
    sources += webos.sources
  } else if (use_neva_media_for_testing) {
    sources += [
      "$_dir/media_platform_api_mock.cc",
      "$_dir/media_platform_api_mock.h",
      "$_dir/neva_mime_util_internal_stub.cc",
    ]
  } else {
    sources += [
      "$_dir/media_platform_api_stub.cc",
      "$_dir/media_platform_api_stub.h",
      "$_dir/neva_mime_util_internal_stub.cc",
    ]
  }
}

