# Copyright 2018-2020 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//build/config/linux/pkg_config.gni")
import("//neva/neva.gni")

webos = {
  configs = []
  public_configs = []
  deps = []
  public_deps = [ "//base" ]
  _dir = get_path_info("../webos", "abspath")
  sources = [
    "$_dir/neva_mime_util_internal_webosose.cc",
  ]
  if (use_gst_media) {
    configs += [ "//media/base/neva/webos:media_base_gst_config" ]
    deps += [ "//base/neva/webos" ]
    sources += [
      "$_dir/media_platform_api_webos_gmp.cc",
      "$_dir/media_platform_api_webos_gmp.h",
      "$_dir/umedia_info_util_webos.cc",
      "$_dir/umedia_info_util_webos.h",
      "$_dir/umedia_info_util_webos_gmp.cc",
      "$_dir/umedia_info_util_webos_gmp.h",
    ]
  } else {
    sources += [
      "$_dir/media_platform_api_webos_stub.cc",
      "$_dir/media_platform_api_webos_stub.h",
    ]
  }
}
