# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

visibility = [ "//ui/ozone/*" ]

import("//build/config/linux/pkg_config.gni")

pkg_config("wayland-webos") {
  packages = [
    "wayland-client",
    "wayland-cursor",
    "wayland-webos-client",
  ]
}

source_set("webos") {
  sources = [
    "common/wayland_webos_object.cc",
    "common/wayland_webos_object.h",
    "host/wayland_shell_surface_wrapper.cc",
    "host/wayland_shell_surface_wrapper.h",
    "host/wayland_webos_extension.cc",
    "host/wayland_webos_extension.h",
    "host/webos_shell_surface_wrapper.cc",
    "host/webos_shell_surface_wrapper.h",
  ]

  deps = [
    "//skia",
    "//ui/ozone/public/mojom/wayland:wayland_mojom",
  ]

  configs += [
    ":wayland-webos",
  ]
}
